--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ gevent==1.0.1
 Django==1.8
 psycopg2==2.6
 dj-database-url==0.3.0
+python-social-auth==0.2.7
 celery==3.1.18
 Pillow==2.8.1
+requests==2.6.2
