--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,12 @@ gevent==1.0.1
 Django==1.8
 psycopg2==2.6
 dj-database-url==0.3.0
+djangorestframework==3.1.1
+Markdown==2.6.2
+django-filter==0.9.2
+django-oauth-toolkit==0.8.1
 python-social-auth==0.2.7
+django-rest-framework-social-oauth2==0.0.4
 celery==3.1.18
 Pillow==2.8.1
 requests==2.6.2
