--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gevent==1.0.1
 Django==1.8
 psycopg2==2.6
 dj-database-url==0.3.0
+django-cors-headers==1.0.0
 djangorestframework==3.1.1
 Markdown==2.6.2
 django-filter==0.9.2
