--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-filter==0.9.2
 django-oauth-toolkit==0.8.1
 python-social-auth==0.2.7
 django-rest-framework-social-oauth2==0.0.4
+django-storages-redux==1.2.3
+boto==2.38.0
 celery==3.1.18
 Pillow==2.8.1
 requests==2.6.2
